[project]
name = "comfyui-karaoke"
version = "0.1.0"
description = "ComfyUI custom node pack for building karaoke pipelines — yt-dlp source, stem separation, and audio plumbing nodes."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "klim314", email = "klim314@gmail.com" }
]
dependencies = [
    "yt-dlp>=2025.1.1",
    "audio-separator[gpu]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nodes"]
